--- a/src/app/components/navigation-menu/navigation-menu.component.css
+++ b/src/app/components/navigation-menu/navigation-menu.component.css
@@ -2,6 +2,14 @@
   display: flex;
   align-items: center;
   background-color: var(--background-color);
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 10px 0;
+  z-index: 1000;
+  border-top: 1px solid color-mix(in srgb, var(--primary-color) 20%, transparent);
+  width: 100%;
 }
 
 .nav-item {
